<!--
  ~ Copyright (C) 2019 Kashesoft
  -->

<resources>
    <string name="app_name">KarcSample</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_first">First</string>
    <string name="load_users">Load users</string>
    <string name="deadlock">Deadlock</string>
    <string name="bad_recursion">Bad recursion</string>
    <string name="title_second">Second</string>
    <string name="next">Next</string>
    <string name="set_up_abc_gateway">Set up abc gateway</string>
    <string name="tear_down_abc_gateway">Tear down abc gateway</string>
    <string name="set_up_xyz_gateway">Set up xyz gateway</string>
    <string name="tear_down_xyz_gateway">Tear down xyz gateway</string>
    <string name="set_up_abc_presenter">Set up abc presenter</string>
    <string name="tear_down_abc_presenter">Tear down abc presenter</string>
    <string name="set_up_xyz_presenter">Set up xyz presenter</string>
    <string name="tear_down_xyz_presenter">Tear down xyz presenter</string>
</resources>
